Fix navbar width on small screens and adjust home section size when scrolled

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -369,7 +369,6 @@
   @media (max-width: 420px), (hover: none) and (pointer: coarse) {
     .home {
       width: 96vw;
-      left: 2vw;
       padding: 0 6px;
     }
 
@@ -394,7 +393,7 @@
     }
 
     .home.scrolled {
-      width: 96vw;
+      width: 80vw;
       height: 8.5vh;
       left: 2vw;
       top: 2vh;
